/*
 * Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package java.apphosting;

import "source.proto";

option cc_enable_arenas = true;
option java_package = "com.google.apphosting.base.protos";
option java_outer_classname = "AppLogsPb";

// TODO: Remove AppLogLine/Group in favor of those in log_service.proto.
message AppLogLine {
  // unix timestamp * 1e6 + microseconds
  required int64 timestamp_usec = 1;

  // Application log level.  Value between 0 and 4.  There is no name
  // association with these levels as they are different from runtime to
  // runtime.  Each runtime will need to map its log levels to this field.
  required int64 level = 2;

  // Message generated by application with details.
  required string message = 3;

  // Line of code that generated this log message.
  optional SourceLocation source_location = 4;
}

// Application log group.  All logs in this structure belong to the same
// request.
message AppLogGroup {
  // Collection of log lines associated with this request.  This field will in
  // practice always have > 0 log lines, as groups with empty log lines are not
  // stored in the applog bigtable.
  repeated AppLogLine log_line = 2;
}

// Log message produced by an application, as stored in Bigtable in logs v2.
message AppLogMessage {
  // Microseconds since the epoch.
  optional int64 timestamp_usec = 1;

  // Message generated by application with details.
  optional string log_message = 2;

  // Line of code that generated this log message.
  optional SourceLocation source_location = 4;
}

// Collection of log messages as stored in the level_X: columns in logs v2.
message AppLogMessages {
  repeated AppLogMessage logs = 1;
}
